objects/FinServ__Employment__c.object
<CustomObject>
    <description>Represents information about a person&apos;s employment history.</description>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployerAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployerPhoneNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinServ__EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Home Maker</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Unemployed with Income</fullName>
                </value>
                <value>
                    <fullName>Unemployed without Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LengthOfEmployment__c</fullName>
        <formula>If(ISBLANK(FinServ__EndDate__c),If(And(Month(TODAY())&gt;= month(FinServ__StartDate__c), Day(TODAY()) &gt;= Day(FinServ__StartDate__c)),
Year(TODAY())- Year(FinServ__StartDate__c) +
(Month(TODAY())-Month(FinServ__StartDate__c))/12,
if(And(month(TODAY())&lt; month(FinServ__StartDate__c), Day(TODAY())&gt;= Day(FinServ__StartDate__c)),
Year(TODAY())-Year(FinServ__StartDate__c)-1 +
(12 - Month(FinServ__StartDate__c)+month(TODAY()))/12,
if(And( month(TODAY())&lt; month(FinServ__StartDate__c), Day(TODAY())&lt; Day(FinServ__StartDate__c)),
(Year(TODAY())-Year(FinServ__StartDate__c)-1) + 
((12 - Month(FinServ__StartDate__c)+month(TODAY())-1))/12,
if(And( month(TODAY())= month(FinServ__StartDate__c), Day(TODAY())&lt; Day(FinServ__StartDate__c)),
(Year(TODAY())- Year(FinServ__StartDate__c)-1) + (11/12),
(Year(TODAY())- Year(FinServ__StartDate__c)) + 
(Month(TODAY())-Month(FinServ__StartDate__c)-1)/12)))),If(And(Month(FinServ__EndDate__c)&gt;= month(FinServ__StartDate__c), Day(FinServ__EndDate__c) &gt;= Day(FinServ__StartDate__c)),
Year(FinServ__EndDate__c)- Year(FinServ__StartDate__c) +
(Month(FinServ__EndDate__c)-Month(FinServ__StartDate__c))/12,
if(And(month(FinServ__EndDate__c)&lt; month(FinServ__StartDate__c), Day(FinServ__EndDate__c)&gt;= Day(FinServ__StartDate__c)),
Year(FinServ__EndDate__c)-Year(FinServ__StartDate__c)-1 +
(12 - Month(FinServ__StartDate__c)+month(FinServ__EndDate__c))/12,
if(And( month(FinServ__EndDate__c)&lt; month(FinServ__StartDate__c), Day(FinServ__EndDate__c)&lt; Day(FinServ__StartDate__c)),
(Year(FinServ__EndDate__c)-Year(FinServ__StartDate__c)-1) + 
((12 - Month(FinServ__StartDate__c)+month(FinServ__EndDate__c)-1))/12,
if(And( month(FinServ__EndDate__c)= month(FinServ__StartDate__c), Day(FinServ__EndDate__c)&lt; Day(FinServ__StartDate__c)),
(Year(FinServ__EndDate__c)- Year(FinServ__StartDate__c)-1) + (11/12),
(Year(FinServ__EndDate__c)- Year(FinServ__StartDate__c)) + 
(Month(FinServ__EndDate__c)-Month(FinServ__StartDate__c)-1)/12)))))</formula>
        <label>Length of Employment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Computer and Mathematical</fullName>
                </value>
                <value>
                    <fullName>Architecture and Engineering</fullName>
                </value>
                <value>
                    <fullName>Life, Physical, and Social Science</fullName>
                </value>
                <value>
                    <fullName>Community and Social Service</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Education, Training, and Library</fullName>
                </value>
                <value>
                    <fullName>Arts, Design, Entertainment, Sports, and Media</fullName>
                </value>
                <value>
                    <fullName>Healthcare Practitioners and Technical</fullName>
                </value>
                <value>
                    <fullName>Healthcare Support</fullName>
                </value>
                <value>
                    <fullName>Protective Service</fullName>
                </value>
                <value>
                    <fullName>Food Preparation and Serving</fullName>
                </value>
                <value>
                    <fullName>Building and Grounds Cleaning/Maintennce</fullName>
                </value>
                <value>
                    <fullName>Personal Care and Service</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Office Admin</fullName>
                </value>
                <value>
                    <fullName>Farming, Fishing, and Forestry</fullName>
                </value>
                <value>
                    <fullName>Construction and Extraction</fullName>
                </value>
                <value>
                    <fullName>Installation, Maintenance, and Repair</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Transportation and Material Moving</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Employment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__EndDateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Error message when the employment end date is in the future.</description>
        <errorConditionFormula>FinServ__EndDate__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>The end date can&apos;t be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__StartDateCannotBeInFuture</fullName>
        <active>true</active>
        <description>Error message when the employment start date is in the future.</description>
        <errorConditionFormula>FinServ__StartDate__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>The start date can&apos;t be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__StartDateCannotBeLaterThanEndDate</fullName>
        <active>true</active>
        <description>Error message when the employment start date is later than the end date.</description>
        <errorConditionFormula>FinServ__StartDate__c &gt; FinServ__EndDate__c</errorConditionFormula>
        <errorMessage>The start date can&apos;t be later than the end date.</errorMessage>
    </validationRules>
</CustomObject>